crates/pixi_manifest/src/snapshots/pixi_manifest__discovery__test__workspace_discoverer@non-pixi-build_project.snap
---
source: crates/pixi_manifest/src/discovery.rs
expression: snapshot
snapshot_kind: text
---
  × [package] section is only allowed when the `pixi-build` feature is enabled
   ╭─[<CARGO_ROOT>/tests/data/workspace-discovery/non-pixi-build/project/pixi.toml:1:1]
 1 │ ╭─▶ [package]
 2 │ │   name = "package"
 3 │ ╰─▶ version = "0.1.0"
 4 │
   ╰────
  help: Run `pixi workspace preview add pixi-build` to enable the preview feature
