crates/pixi_manifest/src/snapshots/pixi_manifest__discovery__test__workspace_discoverer@package_a_package_b.snap
---
source: crates/pixi_manifest/src/discovery.rs
expression: snapshot
---
Discovered workspace at: pixi.toml
- Name: workspace-discovery
Package: package_b @ 0.1.0
