crates/pixi_manifest/src/snapshots/pixi_manifest__discovery__test__workspace_discoverer@requires-newer-pixi-malformed-pyproject.snap
---
source: crates/pixi_manifest/src/discovery.rs
expression: snapshot
---
  × invalid version specifier in 'requires-pixi'
  ╰─▶ missing range specifier for 'not'. Did you mean '==not' or 'not.*'?
   ╭─[<CARGO_ROOT>/tests/data/workspace-discovery/requires-newer-pixi-malformed-pyproject/pyproject.toml:7:18]
 6 │ platforms = []
 7 │ requires-pixi = "not a valid version spec!!"
   ·                  ─────────────┬────────────
   ·                               ╰── could not parse this as a version specifier
 8 │ some-future-field = true
   ╰────
