crates/pixi_manifest/src/snapshots/pixi_manifest__discovery__test__workspace_discoverer@requires-newer-pixi-malformed.snap
---
source: crates/pixi_manifest/src/discovery.rs
expression: snapshot
---
  × invalid version specifier in 'requires-pixi'
  ╰─▶ missing range specifier for 'not'. Did you mean '==not' or 'not.*'?
   ╭─[<CARGO_ROOT>/tests/data/workspace-discovery/requires-newer-pixi-malformed/pixi.toml:5:18]
 4 │ platforms = []
 5 │ requires-pixi = "not a valid version spec!!"
   ·                  ─────────────┬────────────
   ·                               ╰── could not parse this as a version specifier
 6 │ some-future-field = true
   ╰────
