crates/pixi_manifest/src/snapshots/pixi_manifest__discovery__test__workspace_discoverer@requires-newer-pixi-pyproject.snap
---
source: crates/pixi_manifest/src/discovery.rs
expression: snapshot
---
  × this project requires pixi '>=100', but you have pixi <PIXI_VERSION>
   ╭─[<CARGO_ROOT>/tests/data/workspace-discovery/requires-newer-pixi-pyproject/pyproject.toml:7:18]
 6 │ platforms = []
 7 │ requires-pixi = ">=100"
   ·                  ──┬──
   ·                    ╰── this version requirement is not satisfied
 8 │ some-future-field = true
   ╰────
  help: update pixi to a version that satisfies '>=100' with `pixi self-update`
