crates/pixi_manifest/src/snapshots/pixi_manifest__discovery__test__workspace_discoverer@requires-newer-pixi.snap
---
source: crates/pixi_manifest/src/discovery.rs
expression: snapshot
---
  × this project requires pixi '>=100', but you have pixi <PIXI_VERSION>
   ╭─[<CARGO_ROOT>/tests/data/workspace-discovery/requires-newer-pixi/pixi.toml:5:18]
 4 │ platforms = []
 5 │ requires-pixi = ">=100"
   ·                  ──┬──
   ·                    ╰── this version requirement is not satisfied
 6 │ some-future-field = true
   ╰────
  help: install a version of pixi that satisfies '>=100' with `pixi self-update --version <version>` (a plain `pixi self-update` installs the latest version, which may not satisfy this requirement)
